2006-09-09 [mones]	2.4.0cvs166

	* manual/glossary.xml
	* manual/plugins.xml
		Minor format corrections
	* manual/gpl.xml
		Fix misplaced NO WARRANTY section
	* manual/es/advanced.xml
	* manual/es/faq.xml
	* manual/es/glossary.xml
	* manual/es/gpl.xml
	* manual/es/handling.xml
	* manual/es/plugins.xml
	* manual/es/starting.xml
		Incorporate changes from English version
	* manual/fr/ack.xml
	* manual/pl/ack.xml
	* manual/es/ack.xml
		Fix address, (add translation credits in es version)
	* po/es.po
		Updated translation

2006-09-09 [wwp]	2.4.0cvs165

	* src/prefs_filtering.c
		fix a crash when opening filtering prefs, if matcherrc file contains
		broken data (non-existing account id, which is theoretically not
		possible).

2006-09-08 [colin]	2.4.0cvs164

	* src/folder.c
		Wrong assert, make it an if()
	* src/gtk/gtksctree.c
		Fix bug #1013 (expand selected thread 
		tree) - expanding is now recursive

2006-09-07 [wwp]	2.4.0cvs163

	* src/prefs_matcher.c
		make better sentences about addressbook matching in the
		matcher prefs. This should make translators' work easier
		too.

2006-09-07 [wwp]	2.4.0cvs162

	* src/prefs_filtering.c
		code simplification (get rid of dup var. assignment).

2006-09-07 [wwp]	2.4.0cvs161

	* src/summaryview.c
		use GTK_STOCK icons when possible, patch by Fabien Vantard
		<fzzzzz@gmail.com>.

2006-09-07 [paul]	2.4.0cvs160

	* src/mimeview.c
		fix compilation warnings
		Thanks to Colin

2006-09-07 [paul]	2.4.0cvs159

	* src/mimeview.c
		select the mimepart icon when
		displaying as text
		Thanks to Colin

2006-09-06 [paul]	2.4.0cvs158

	* src/prefs_filtering.c
		fix labels and table element spacing
		Patch by Fabien Vantard

2006-09-06 [paul]

	2.5.0-rc3 released

2006-09-06 [paul]	2.4.0cvs157

	* manual/es/advanced.xml
		fix typo

2006-09-06 [wwp]	2.4.0cvs156

	* src/mainwindow.c
		fix an dup launch issue when iconified, thanks to Colin.

2006-09-06 [wwp]	2.4.0cvs155

	* src/gtk//gtksctree.h
		oops, forgot that one!
