@@ -1858,3 +1858,4 @@
 ( cvs diff -u -r 1.213.2.113 -r 1.213.2.114 src/folder.c;  cvs diff -u -r 1.1.4.28 -r 1.1.4.29 src/gtk/gtksctree.c;  ) > 2.4.0cvs164.patchset
 ( cvs diff -u -r 1.59.2.45 -r 1.59.2.46 src/prefs_filtering.c;  ) > 2.4.0cvs165.patchset
 ( cvs diff -u -r 1.1.2.13 -r 1.1.2.14 manual/glossary.xml;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 manual/gpl.xml;  cvs diff -u -r 1.1.2.15 -r 1.1.2.16 manual/plugins.xml;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 manual/es/ack.xml;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 manual/es/advanced.xml;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 manual/es/faq.xml;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 manual/es/glossary.xml;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 manual/es/gpl.xml;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 manual/es/handling.xml;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 manual/es/plugins.xml;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 manual/es/starting.xml;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 manual/fr/ack.xml;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 manual/pl/ack.xml;  cvs diff -u -r 1.60.2.33 -r 1.60.2.34 po/es.po;  ) > 2.4.0cvs166.patchset
+( cvs diff -u -r 1.59.2.46 -r 1.59.2.47 src/prefs_filtering.c;  ) > 2.4.0cvs167.patchset
